<resources>
    <string name="app_name">Calculator App</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="calculator_app">CALCULATOR APP</string>

    <string name="btn9">9</string>
    <string name="btn8">8</string>
    <string name="btn7">7</string>
    <string name="btn6">6</string>
    <string name="btn5">5</string>
    <string name="btn4">4</string>
    <string name="btn3">3</string>
    <string name="btn2">2</string>
    <string name="btn1">1</string>
    <string name="btn0">0</string>
</resources>