<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/calculator_app"
            app:titleCentered="true"
            app:titleTextColor="@color/white"
            />

        <TextView
            android:id="@+id/textViewHistory"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/white"
            android:gravity="center|end" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:text="@string/_0"
            android:textSize="75sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:gravity="center|end"
            android:background="@color/white"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnCount="4"
            android:rowCount="5"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/ac"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/del"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/divide"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMultiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/multi"
                android:textSize="25sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:text="@string/btn7"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:text="@string/btn8"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:text="@string/btn9"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/minus"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:text="@string/btn4"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:text="@string/btn5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:text="@string/btn6"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/add"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:text="@string/btn1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:text="@string/btn2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:text="@string/btn3"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_row="3"
                android:layout_rowSpan="2"
                android:layout_column="3"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/equal"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/dot"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:text="@string/btn0"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_columnSpan="2"/>

        </GridLayout>


    </LinearLayout>

</LinearLayout>